--- a/javascript.html
+++ b/javascript.html
@@ -12,9 +12,10 @@
             var username=prompt("Veuillez saisir votre prénom : ");
  		alert(username);            
 
-           for(var i=50; i<= 65; i++) {
+          /* for(var i=50; i<= 65; i++) {
             console.log(i);
-           }
+           } */
+         </script>
     </body>
 
 </html>
