--- a/javascript.html
+++ b/javascript.html
@@ -10,7 +10,7 @@
 
          <script type="text/javasript">
             var username=prompt("Veuillez saisir votre prénom : ");
- 		alert(username);            
+ 		alert(' Bonjour' + " " + username);            
 
           /* for(var i=50; i<= 65; i++) {
             console.log(i);
